# pustaka

./: .env.example  .env.prod.example  .env.sample  .env.xendit.example  .formatter.exs  .gitattributes  .gitignore  404.html  AGENTS.md  AGENT_HINT.md  CHANGELOG.md  COLLECTION_FILTERS.md  Containerfile  Dockerfile  Dockerfile.dev  ENHANCED_SEARCH_README.md  HOLIDAY_SYSTEM.md  IMPORTER_OPTIMIZATION_ANALYSIS.md  LEDGER_IMPLEMENTATION.md  LICENSE  MIGRATION.md  ONBOARDING.md  PERFORMANCE_OPTIMIZATION.md  RBAC_PATCHES.md  README.md  SEARCH_MODULE.md  SEARCH_MODULE_README.md  deploy.sh  index.html  mix.exs  mkdocs.yml  podman-compose.prod.yml  podman-compose.yml  pyproject.toml  sitemap.xml  test_missing_items.csv
architecture/: index.html
assets/: tsconfig.json
authentication/: index.html
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
deployment/: index.html
docs/: AI_PREPAREDNESS_REVIEW_AND_RECOMMENDATIONS.md  ATTACHMENT_ACCESS_CONTROL.md  ATTACHMENT_ACCESS_FLOW_DIAGRAMS.md  ATTACHMENT_ACCESS_MIGRATION_GUIDE.md  ATTACHMENT_LIVEVIEW_GUIDE.md  ATTACHMENT_LIVEVIEW_IMPLEMENTATION.md  ATTACHMENT_MANAGER_QUICKSTART.md  ATTACHMENT_RBAC_IMPLEMENTATION_SUMMARY.md  COLLECTION_REVIEW_QUICK_REFERENCE.md  ENVIRONMENT_SETUP.md  NODE_LOAN_RULES_SETUP.md  NODE_MANAGEMENT_LIVEVIEW.md  OAI_PMH_METADATA_MAPPING.md  OAI_PMH_QUICKSTART.md  PODMAN_DEPLOYMENT.md  README_OAI_PMH.md  STOCK_OPNAME_COMPLETION_QUICKSTART.md  STOCK_OPNAME_CONTEXT_MIGRATION.md  STOCK_OPNAME_DESIGN.md  STOCK_OPNAME_IMPLEMENTATION_SUMMARY.md  STOCK_OPNAME_LIBRARIAN_COMPLETION.md  architecture.mmd  (+16 more)
(+883 files in other folders)
